fixing issue with stack overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,114 +1,166 @@
-     *{
-        margin: 0%;
-        padding: 0%;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-     }
+*{
+   margin: 0;
+   padding: 0;
+   font-family: 'Poppins', sans-serif;
+}
+.header{
+   min-height: 100vh;
+   width: 100%;
+   background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(/assets/images/banner/meditationbanner.jpg);
+   background-position: center;
+   background-size: cover;
+   position: relative;
+   overflow: hidden;
+}
 
-     
-     .header{
-      width: 100%;
-      min-height: 100vh;
-      background-image: url("../images/banner/meditationbanner.jpg");
-      background-position: center;
-      background-size: cover;
-      position: relative;
-     }
-     nav{
-      display: flex;
-      padding: 2% 6%;
-      justify-content: space-between;
-      align-items: center;
-     }
-     nav img{
-      width: 150px;
-      height: auto;
-     }
-     .nav-links{
-      flex: 1;
-      text-align: right;
-     }
-     .nav-links ul li{
-      list-style: none;
-      display:inline-block;
-      padding: 8px 12px;
-      position: relative;
-     }
-     .nav-links ul li a{
-      color: rgb(255, 255, 255);
-      text-decoration: none;
-      font-size: 15px;
-     }
-     .text-box{
-      width: 90%;
-      color: black;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%,-50%);
-      text-align: center;
-     }
-     .text-box h1{
-      font-size: 62px;
-     }
-     .text-box p{
-      margin: 10px 0 40px;
-      font-size: 14px;
-      color: aliceblue;
-     }
-     .hero-btn{
-      display: inline-block;
-      text-decoration: none;
-      color: #fff;
-      border: 1px solid #fff;
-      padding: 12px34px;
-      font-size: 13px;
-      background: transparent;
-      position: relative;
-      cursor: pointer;
-     }
-     nav.fa{
-      display: none;
-     }
+nav{
+   display: flex;
+   padding: 2% 4%;
+   justify-content: space-between;
+   align-items: center;
+}
+nav img{
+   width: 135px;
+}
+.nav-links{
+   flex: 1;
+   text-align: right;
+}
+.nav-links ul li{
+   list-style: none;
+   display: inline-block;
+   padding: 8px 12px;
+   position: relative;
+}
+.nav-links ul li a{
+   color: rgb(226, 0, 0);
+   text-decoration: none;
+   font-size: 13px;
+}
+.nav-links ul li::after{
+   content: '';
+   width: 0%;
+   height: 2px;
+   background: #ffd5d2be;
+   display: block;
+   margin: auto;
+   transition: .5s;    
+}
+.nav-links ul li:hover::after{
+   width: 100%;
+}
+nav .fa{
+   display: none;
+}
+
+.text-box{
+   width: 90%;
+   color: #fff;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   text-align: center;
+}
+.text-box h1{
+   font-size: 62px;
+}
+.text-box p{
+   margin: 20px 0 40px;
+   font-size: 14px;
+   color: #fff;
+}
+.hero-btn {
+   display: inline-block;
+   text-decoration: none;
+   color: #fff;
+   border: 1px solid #fff;
+   padding: 12px 34px;
+   font-size: 13px;
+   background: transparent;
+   position: relative;
+   cursor: pointer;
+   transition: 1s;
+}
+
+.hero-btn:hover{
+   border: 1px solid #f44336;
+   background: #1e9b6b;
+}
 
 
-
-     @media(max-width: 700px){
-      .text-box h1{
-         font-size: 20px;
-      }
-      .nav-links ul li{
-         display: block;
-        }
-        .nav-links{
-         position: absolute;
-         background: #c79409;
-         height: 100vh;
-         width: 200px;
-         top: 0;
-         right: 0px;
-         text-align: left;
-         z-index: 2;
-         transition: 1s;
-     }
-     nav.fa{
-      display: block;
-      color: #fff;
-      margin: 10px;
-      font-size: 22px;
-      cursor: pointer;
-     }
-     .nav-links ul{
-      padding: 30px;
-
-     }
+@media(max-width: 700px)
+{
+  .nav-links ul li
+   {
+       display: block;
    }
-   /*---- course introduction and explanation ----*/
-   .course{
-      width: 80%;
-      margin: auto;
-      text-align: center;
-      padding-top: 100px;
+   .nav-links
+   {
+       position: fixed;
+       background: #f44336;
+       height: 100vh;
+       width: 200px;
+       top: 0;
+       right: -200px;
+       text-align: left;
+       z-index: 2;
+       transition: 0.5s;
    }
-      
-     
-     
+   .nav-links ul{
+       padding: 30px;
+   }
+   nav .fa{
+       display: block;
+       color: #fff;
+       margin: 10px;
+       font-size: 22px;
+       cursor: pointer; 
+   }
+   .text-box h1{
+       font-size: 20px;
+   }
+}
+
+/*---------- course --------*/
+
+.course{
+   width: 80%;
+   margin: auto;
+   text-align: center;
+   padding-top: 100px;
+}
+h1{
+   font-size: 36px;
+   font-weight: 600;
+}
+p{
+   color: #777;
+   font-size: 14px;
+   font-weight: 300;
+   line-height: 22px;
+   padding: 10px;
+}
+.row{
+   margin-top: 5%;
+   display: flex;
+   justify-content: space-between;  
+}
+ 
+.course-col{
+   flex-basis: 31%;
+   background: #fff3f3;
+   border-radius: 10px;
+   margin-bottom: 5%;
+   padding: 20px 12px;
+   box-sizing: border-box;
+   transition: .5s;
+}
+h3{
+   text-align: center;
+   font-weight: 600;
+   margin: 10px 0;
+}
+.course-col:hover{
+   box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
+}
